--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,18 @@
 
 body {
   font-family: "chivo", sans-serif;
+  overflow-x: hidden;
+  scrollbar-color: black white;
+}
+
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: black;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: white;
 }
