--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,7 @@ body::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar-track {
   background-color: white;
 }
+
+.tiktok-text {
+  text-shadow: 6px -6px 0 #24ece7, -6px 6px 0 #f7004d;
+}
