--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,16 @@ body::-webkit-scrollbar-track {
   background-color: white;
 }
 
+::-moz-selection { /* Code for Firefox */
+  color: white;
+  background: black;
+}
+
+::selection {
+  color: white;
+  background: black;
+}
+
 .tiktok-text {
   text-shadow: 6px -6px 0 #24ece7, -6px 6px 0 #f7004d;
 }
