Added animations on scroll

--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,13 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "chivo", sans-serif;
   overflow-x: hidden;
+  position: relative;
   scrollbar-color: black rgb(249, 250, 251);
 }
 
